--- a/site/profile.html
+++ b/site/profile.html
@@ -2,9 +2,13 @@
 <html lang="ja">
 
 <head>
+
 	<meta charset="UTF-8">
-	<title>自己紹介</title>
+	<title>
+		自己紹介
+	</title>
 	<link rel="stylesheet" href="./css/profile.css">
+
 </head>
 
 <body>
@@ -13,30 +17,67 @@
  </header>
 
  <section>
-	<img src="./images/profile/profile_picture.png" alt="自己紹介写真">
-	<h2>エンターテイナーは総じて変態</h2>
-	<p>私は自分で何とかするクセをつけたいと思います。なぜなら…</p>
-	<h3>氏　　名</h3>
-	<p>国際　電子　/　こくさい　でんこ</p>
-	<h3>生年月日</h3>
-	<p>yyyy/mm/dd</p>
-	<h3>趣　　味</h3>
-	<p>[あああああ、いいいいい、ううううう、えええええ、おおおおお]</p>
+	<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
+	
+	<h2>
+		エンターテイナーは総じて変態
+	</h2>
+	<p>
+		テストテストテストテストテストテスト
+	</p>
+	<h3>
+		氏　　名
+	</h3>
+
+	<p>
+		国際　電子　/　こくさい　でんこ
+	</p>
+
+	<h3>
+		生年月日
+	</h3>
+
+	<p>
+		yyyy/mm/dd
+	</p>
+
+	<h3>
+		趣　　味
+	</h3>
+
+	<p>
+		[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+	</p>
 </section>
 
 <section>
-	<h3>扱えるツール</h3>
-	<p>[あああああ、いいいいい、ううううう、えええええ、おおおおお]</p>
+	<h3>
+		扱えるツール
+	</h3>
+
+	<p>
+		[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+	</p>
 </section>
 
 <section>
-	<h3>資格</h3>
-	<p>[あああああ、いいいいい、ううううう、えええええ、おおおおお]</p>
+	<h3>
+		資　　格
+	</h3>
+
+	<p>
+		[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+	</p>
 </section>
 
 <section>
-	<h3>なりたい将来像</h3>
-	<p>テストテストテストテストテストテストテストテストテストテストテストテスト</p>
+	<h3>
+		なりたい将来像
+	</h3>
+
+	<p>
+		テストテストテストテストテストテストテストテストテストテストテストテスト
+	</p>
 </section>
 
 </body>
