index.html Update

--- a/site/index.html
+++ b/site/index.html
@@ -1,23 +1,51 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-	<!--
-		<link href="style.css" rel="stylesheet" type="text/css" media="all">
-	-->
 	<meta charset="UTF-8">
+	<link href="../css/index/index.css" rel="stylesheet" type="text/css" media="all">
 	<title>
 		ポートフォリオ
 	</title>
 </head>
 <body>
-	<h1>
-		ITエンジニア科ゲームプログラムコース
-	</h1>
-	<h2>
-		Topページ
-	</h2>
-	<a href="リンク先のＵＲＬ">自己紹介</a>
-	<a href="リンク先のＵＲＬ">作品紹介（りんご落とし）</a>
-	<a href="リンク先のＵＲＬ">作品紹介（バルーンファイト）</a>
+	<header>
+		<h1 class="title">
+			ポートフォリオ
+		</h1>
+		<nav>
+			<ui>
+				<li class="menu-item">
+					<a href="profile.html">
+						自己紹介
+					</a>
+				</li>
+				<li class="menu-item">
+					<a href="profile.html">
+						りんご落とし
+					</a>
+				</li>
+				<li class="menu-item">
+					<a href="profile.html">
+						バルーンファイト
+					</a>
+				</li>
+			</ui>
+		</nav>
+	</header>
+
+	<section>
+		<h1>
+			トップページ
+		</h1>
+		<a href="profile.html" class="btn">吾輩は人である。名前は......</a>
+		<a href="profile.html" class="btn">親方ぁ、空から林檎がぁ</a>
+		<a href="profile.html" class="btn">風船おじさんと岩田社長</a>
+	</section>
+
+	<footer id="footer">
+		<p>
+			
+		</p>
+	</footer>
 </body>
 </html>
