--- a/site/profile.html
+++ b/site/profile.html
@@ -7,7 +7,7 @@
 	<title>
 		自己紹介
 	</title>
-	<link rel="stylesheet" href="./css/profile.css">
+	<link rel="stylesheet" href="../css/profile.css">
 
 </head>
 
@@ -16,19 +16,21 @@
 	トップ　自己紹介　作品紹介    
  </header>
 
- <section>
-	<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
-	
+ <article>
+	<figure>
+		<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
+	</figure>
+
 	<h2>
 		エンターテイナーは総じて変態
 	</h2>
 	<p>
 		テストテストテストテストテストテスト
 	</p>
+
 	<h3>
 		氏　　名
 	</h3>
-
 	<p>
 		国際　電子　/　こくさい　でんこ
 	</p>
@@ -36,7 +38,6 @@
 	<h3>
 		生年月日
 	</h3>
-
 	<p>
 		yyyy/mm/dd
 	</p>
@@ -44,11 +45,10 @@
 	<h3>
 		趣　　味
 	</h3>
-
 	<p>
 		[あああああ、いいいいい、ううううう、えええええ、おおおおお]
 	</p>
-</section>
+</article>
 
 <section>
 	<h3>
