--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<link href="../css/index/index.css" rel="stylesheet" type="text/css" media="all">
+	<link href="../css/index.css" rel="stylesheet" type="text/css" media="all">
 	<title>
 		ポートフォリオ
 	</title>
