--- a/site/profile.html
+++ b/site/profile.html
@@ -52,32 +52,38 @@
 	</section>
 </article>
 
-<section>
-	<h3>
-		扱えるツール
-	</h3>
-	<p>
-		[あああああ、いいいいい、ううううう、えええええ、おおおおお]
-	</p>
-</section>
+<article>
+	<section>
+		<h3>
+			扱えるツール
+		</h3>
+		<p>
+			[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+		</p>
+	</section>
+</article>
 
-<section>
-	<h3>
-		資　　格
-	</h3>
-	<p>
-		[あああああ、いいいいい、ううううう、えええええ、おおおおお]
-	</p>
-</section>
+<article>
+	<section>
+		<h3>
+			資　　格
+		</h3>
+		<p>
+			[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+		</p>
+	</section>
+</article>
 
-<section>
-	<h3>
-		なりたい将来像
-	</h3>
-	<p>
-		テストテストテストテストテストテストテストテストテストテストテストテスト
-	</p>
-</section>
+<article>
+	<section>
+		<h3>
+			なりたい将来像
+		</h3>
+		<p>
+			テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+		</p>
+	</section>
+	<article>
 
 </body>
 
