--- a/site/index.html
+++ b/site/index.html
@@ -7,39 +7,29 @@
 		ポートフォリオ
 	</title>
 </head>
-<body>
+<body class="fadeout">
 	<header>
 		<h1 class="title">
 			ポートフォリオ
 		</h1>
-		<nav>
-			<ui>
-				<li class="menu-item">
-					<a href="profile.html">
-						自己紹介
-					</a>
-				</li>
-				<li class="menu-item">
-					<a href="profile.html">
-						りんご落とし
-					</a>
-				</li>
-				<li class="menu-item">
-					<a href="profile.html">
-						バルーンファイト
-					</a>
-				</li>
-			</ui>
-		</nav>
 	</header>
 
 	<section>
 		<h1>
 			トップページ
 		</h1>
-		<a href="profile.html" class="btn">吾輩は人である。名前は......</a>
-		<a href="profile.html" class="btn">親方ぁ、空から林檎がぁ</a>
-		<a href="profile.html" class="btn">風船おじさんと岩田社長</a>
+		<a href="profile.html" class="btn">
+			『吾輩は人である。名前は......』
+		</a>
+		<a href="profile.html" class="btn">
+			『親方ぁ、空から林檎がぁ』
+		</a>
+		<a href="profile.html" class="btn">
+			『風船おじさんと岩田社長』
+		</a>
+		<a href="profile.html" class="btn">
+			『一は全、全は一』
+		</a>
 	</section>
 
 	<footer id="footer">
