--- a/site/profile.html
+++ b/site/profile.html
@@ -2,90 +2,87 @@
 <html lang="ja">
 
 <head>
-
 	<meta charset="UTF-8">
 	<title>
 		自己紹介
 	</title>
 	<link rel="stylesheet" href="../css/profile.css">
-
 </head>
 
 <body>
- <header>
-	トップ　自己紹介　作品紹介    
- </header>
+	<header>
+		<h1>Sample_Portfolio</h1> 
+	</header>
 
- <article>
-	<figure>
-		<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
-	</figure>
+ 	<article>
+		<figure>
+			<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
+		</figure>
 
-	<section>
-		<h2>
-			エンターテイナーは総じて変態
-		</h2>
-		<p>
-			テストテストテストテストテストテスト
-		</p>
+		<section>
+			<h2>
+				エンターテイナーは総じて変態
+			</h2>
+			<p>
+				テストテストテストテストテストテスト
+			</p>
 
-		<h3>
-			氏　　名
-		</h3>
-		<p>
-			国際　電子　/　こくさい　でんこ
-		</p>
+			<h3>
+				氏　　名
+			</h3>
+			<p>
+				国際　電子　/　こくさい　でんこ
+			</p>
 
-		<h3>
-			生年月日
-		</h3>
-		<p>
-			yyyy/mm/dd
-		</p>
+			<h3>
+				生年月日
+			</h3>
+			<p>
+				yyyy/mm/dd
+			</p>
 
-		<h3>
-			趣　　味
-		</h3>
-		<p>
-			[あああああ、いいいいい、ううううう、えええええ、おおおおお]
-		</p>
-	</section>
-</article>
+			<h3>
+				趣　　味
+			</h3>
+			<p>
+				[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+			</p>
+		</section>
+	</article>
 
-<article>
-	<section>
-		<h3>
-			扱えるツール
-		</h3>
-		<p>
-			[あああああ、いいいいい、ううううう、えええええ、おおおおお]
-		</p>
-	</section>
-</article>
-
-<article>
-	<section>
-		<h3>
-			資　　格
-		</h3>
-		<p>
-			[あああああ、いいいいい、ううううう、えええええ、おおおおお]
-		</p>
-	</section>
-</article>
-
-<article>
-	<section>
-		<h3>
-			なりたい将来像
-		</h3>
-		<p>
-			テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
-		</p>
-	</section>
 	<article>
+		<section>
+			<h3>
+				扱えるツール
+			</h3>
+			<p>
+				[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+			</p>
+		</section>
+	</article>
+
+	<article>
+		<section>
+			<h3>
+				資　　格
+			</h3>
+			<p>
+				[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+			</p>
+		</section>
+	</article>
+
+	<article>
+		<section>
+			<h3>
+				なりたい将来像
+			</h3>
+			<p>
+				テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+			</p>
+		</section>
+	</article>
 
 </body>
-
 
 </html>
