--- a/site/profile.html
+++ b/site/profile.html
@@ -14,17 +14,40 @@
 		<h1>Sample_Portfolio</h1> 
 	</header>
 
+
  	<article>
-		<figure>
-			<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
-		</figure>
+		<div class="top">
+			<figure>
+				<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
+			</figure>
+		</div>
 
 		<section>
 			<h2>
 				エンターテイナーは総じて変態
 			</h2>
 			<p>
-				テストテストテストテストテストテスト
+				プログラマーを志すも、高校での授業に挫折。趣味の「絵を描く」ことを仕事にできたらステキやん？という
+				思いから、デザイン科のある専門学校へ入学。
+			</p>
+			<p>	
+				就職先は、沖縄にかつてあった、親会社がバカでかい有名デベロッパーゲーム会社に勤務。
+				そこでゲーム会社の厳しさをこれでもかというほど経験し、潔癖症の克服とともに、オシャレに興味を無くす
+				（すぐに寝れるよう、Tシャツ短パン・眼鏡とスッピンが至高と気づく）。
+			</p>
+			<p>	
+				ゲームは好きだが、従業員としてずっと作り続けることは身が持たないなぁと感じ、退職。その後、元同僚で専門学校の
+				同期から、那覇市の非常勤（工事中に出てきた、昔の村や町などの痕跡を記録する業務）を探していると情報をキャッチ。
+				正直ゆるそうだなぁと思って応募→採用される。
+			</p>
+			<p>	
+				那覇市の非常勤として働いている際、専門学校でお世話になった職員から「職員にならないか？」と声を掛けられる。
+				「人にモノを教える、伝える、成果物を上げさせる」ことはゲーム会社でも経験したが、正直、学生にソレをさせるのは
+				ストレスがすごそうなので、ご丁寧にお断りさせていただいた。…が、押しが強く、こんなに来てほしいと思ってもらえるのなら、
+				いいかなぁという気持ちで現在に至る。
+			</p>
+			<p>
+				すごいわ、私のメンタル（絶対に、ゲーム会社勤務のおかげです）。
 			</p>
 
 			<h3>
@@ -38,14 +61,14 @@
 				生年月日
 			</h3>
 			<p>
-				yyyy/mm/dd
+				1900/01/01
 			</p>
 
 			<h3>
 				趣　　味
 			</h3>
 			<p>
-				[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+				ゲーム（
 			</p>
 		</section>
 	</article>
@@ -56,8 +79,14 @@
 				扱えるツール
 			</h3>
 			<p>
-				[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+				＜ビジネス系＞Officeソフト（Word、Excel、PowerPoint）、Slack
 			</p>
+			<P>
+				＜デザイン系＞Photoshop、Illustrator、Premiere Pro
+			</P>
+			<P>
+				＜勉強中＞HTML+CSS（指導のため）、C言語（指導のため）、Git（指導のため）
+			</P>
 		</section>
 	</article>
 
@@ -67,8 +96,9 @@
 				資　　格
 			</h3>
 			<p>
-				[あああああ、いいいいい、ううううう、えええええ、おおおおお]
+				＜国家資格＞運転免許（普通自動車一種AT・小型普通二輪免許AT）情報セキュリティマネジメント
 			</p>
+
 		</section>
 	</article>
 
