--- a/site/profile.html
+++ b/site/profile.html
@@ -38,13 +38,13 @@
 			<p>	
 				ゲームは好きだが、従業員としてずっと作り続けることは身が持たないなぁと感じ、退職。その後、元同僚で専門学校の
 				同期から、那覇市の非常勤（工事中に出てきた、昔の村や町などの痕跡を記録する業務）を探していると情報をキャッチ。
-				正直ゆるそうだなぁと思って応募→採用される。
+				なんだかゆるそうだなぁと思って応募→採用される。
 			</p>
 			<p>	
 				那覇市の非常勤として働いている際、専門学校でお世話になった職員から「職員にならないか？」と声を掛けられる。
 				「人にモノを教える、伝える、成果物を上げさせる」ことはゲーム会社でも経験したが、正直、学生にソレをさせるのは
-				ストレスがすごそうなので、ご丁寧にお断りさせていただいた。…が、押しが強く、こんなに来てほしいと思ってもらえるのなら、
-				いいかなぁという気持ちで現在に至る。
+				ストレスがすごそうなので、ご丁寧にお断りさせていただいた。…が、押しが強く、こんなに来てほしいと思ってもらえるうちが、華だなぁという
+				気持ちで現在に至る。
 			</p>
 			<p>
 				すごいわ、私のメンタル（絶対に、ゲーム会社勤務のおかげです）。
