--- a/site/work2_01.html
+++ b/site/work2_01.html
@@ -6,7 +6,7 @@
 	<title>
 		りんごおとし
 	</title>
-	<link rel="stylesheet" href="../css/profile.css">
+	<link rel="stylesheet" href="../css/work.css">
 </head>
 
 <body>
@@ -17,59 +17,26 @@
 
  	<article>
 		<div class="top">
-			<figure>
-				<img src="../images/profile/profile_picture.png" alt="自己紹介写真">
-			</figure>
+			<h1>
+				りんごおとし
+			</h1>
 		</div>
 
 		<section>
 			<h2>
-				エンターテイナーは総じて変態
+				作品概要
 			</h2>
 			<p>
-				プログラマーを志すも、高校での授業に挫折。趣味の「絵を描く」ことを仕事にできたらステキやん？という
-				思いから、デザイン科のある専門学校へ入学。
-			</p>
-			<p>	
-				就職先は、沖縄にかつてあった、親会社がバカでかい有名デベロッパーゲーム会社に勤務。
-				そこでゲーム会社の厳しさをこれでもかというほど経験し、潔癖症の克服とともに、オシャレに興味を無くす
-				（すぐに寝れるよう、Tシャツ短パン・眼鏡とスッピンが至高と気づく）。
-			</p>
-			<p>	
-				ゲームは好きだが、従業員としてずっと作り続けることは身が持たないなぁと感じ、退職。その後、元同僚で専門学校の
-				同期から、那覇市の非常勤（工事中に出てきた、昔の村や町などの痕跡を記録する業務）を探していると情報をキャッチ。
-				なんだかゆるそうだなぁと思って応募→採用される。
-			</p>
-			<p>	
-				那覇市の非常勤として働いている際、専門学校でお世話になった職員から「職員にならないか？」と声を掛けられる。
-				「人にモノを教える、伝える、成果物を上げさせる」ことはゲーム会社でも経験したが、正直、学生にソレをさせるのは
-				ストレスがすごそうなので、ご丁寧にお断りさせていただいた。…が、押しが強く、こんなに来てほしいと思ってもらえるうちが、華だなぁという
-				気持ちで現在に至る。
-			</p>
-			<p>
-				すごいわ、私のメンタル（絶対に、ゲーム会社勤務のおかげです）。
+				ああああああああああああああああああああああああああああああああああああああああああああああああああああ
+				ああああああああああああああああああああああああああああああああああああああああああああああああああああ
+				あああああああああああああああああああああああああああああああ
 			</p>
 
-			<h3>
-				氏　　名
-			</h3>
-			<p>
-				国際　電子　/　こくさい　でんこ
-			</p>
-
-			<h3>
-				生年月日
-			</h3>
-			<p>
-				1900/01/01
-			</p>
-
-			<h3>
-				趣　　味
-			</h3>
-			<p>
-				ゲーム（
-			</p>
+			<figure>
+				<img src="../images/work_introduction/work2_01/work2_01_01.png" alt="タイトル画面">
+				<img src="../images/work_introduction/work2_01/work2_01_02.png" alt="ゲームメイン画面">
+			</figure>
+			
 		</section>
 	</article>
 
