--- a/site/work2_01.html
+++ b/site/work2_01.html
@@ -26,18 +26,26 @@
 			<h2>
 				作品概要
 			</h2>
+			
 			<p>
 				ああああああああああああああああああああああああああああああああああああああああああああああああああああ
 				ああああああああああああああああああああああああああああああああああああああああああああああああああああ
 				あああああああああああああああああああああああああああああああ
 			</p>
-
+			
 			<figure>
 				<img src="../images/work_introduction/work2_01/work2_01_01.png" alt="タイトル画面">
+				<figcaption>
+					タイトル画面
+				</figcaption>
 				<img src="../images/work_introduction/work2_01/work2_01_02.png" alt="ゲームメイン画面">
+				<figcaption>
+					ゲームメイン画面
+				</figcaption>
 			</figure>
-			
+
 		</section>
+
 	</article>
 
 	<article>
