--- a/site/work2_01.html
+++ b/site/work2_01.html
@@ -27,42 +27,16 @@
 				作品概要
 			</h2>
 			
-			<p>
-				ああああああああああああああああああああああああああああああああああああああああああああああああああああ
-				ああああああああああああああああああああああああああああああああああああああああああああああああああああ
-				あああああああああああああああああああああああああああああああ
-			</p>
-			
-			<figure>
-				<img src="../images/work_introduction/work2_01/work2_01_01.png" alt="タイトル画面">
-				<figcaption>
-					タイトル画面
-				</figcaption>
-				<img src="../images/work_introduction/work2_01/work2_01_02.png" alt="ゲームメイン画面">
-				<figcaption>
-					ゲームメイン画面
-				</figcaption>
-			</figure>
+				<p>
+					ああああああああああああああああああああああああああああああああああああああああああああああああああああ
+				</p>
 
+				<figure>
+					<img src="../images/work_introduction/work2_01/work2_01_01.png" alt="タイトル画面とゲームメイン画面">
+				</figure>
+	
 		</section>
 
-	</article>
-
-	<article>
-		<section>
-			<h3>
-				扱えるツール
-			</h3>
-			<p>
-				＜ビジネス系＞Officeソフト（Word、Excel、PowerPoint）、Slack
-			</p>
-			<P>
-				＜デザイン系＞Photoshop、Illustrator、Premiere Pro
-			</P>
-			<P>
-				＜勉強中＞HTML+CSS（指導のため）、C言語（指導のため）、Git（指導のため）
-			</P>
-		</section>
 	</article>
 
 	<article>
