--- a/site/index.html
+++ b/site/index.html
@@ -21,13 +21,13 @@
 		<a href="profile.html" class="btn">
 			『吾輩は人である。名前は......』
 		</a>
-		<a href="profile.html" class="btn">
+		<a href="work2_01.html" class="btn">
 			『親方ぁ、空から林檎がぁ』
 		</a>
-		<a href="profile.html" class="btn">
+		<a href="work2_02.html" class="btn">
 			『風船おじさんと岩田社長』
 		</a>
-		<a href="profile.html" class="btn">
+		<a href="work2_02.html" class="btn">
 			『一は全、全は一』
 		</a>
 	</section>
